Actions
Bug #9856
closed[PATCH] process.c (proc_getgroups, proc_setgroups): use ALLOCV_N
Bug #9856:
[PATCH] process.c (proc_getgroups, proc_setgroups): use ALLOCV_N
Description
On my Linux system, these may return up to 64K rb_gid_t entries for
a total of 256K stack usage, potentially triggering SystemStackError
or just a segfault. Use ALLOCV_N for stack safety, especially since
these are not performance-critical methods.
Will commit in a day or two.
Files
Updated by Anonymous about 12 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
Applied in changeset r46075.
process.c (proc_getgroups, proc_setgroups): use ALLOCV_N
- process.c (proc_getgroups, proc_setgroups): use ALLOCV_N
[Bug #9856]
Updated by usa (Usaku NAKAMURA) about 12 years ago
- Backport changed from 2.0.0: REQUIRED, 2.1: REQUIRED to 2.0.0: DONE, 2.1: REQUIRED
backported into ruby_2_0_0 at r46581.
Updated by nagachika (Tomoyuki Chikanaga) about 12 years ago
- Backport changed from 2.0.0: DONE, 2.1: REQUIRED to 2.0.0: DONE, 2.1: DONE
Backported into ruby_2_1 branch at r46615.
Actions