process.c
@@ -5547,7 +5547,7 @@ maxgroups(void)
 static VALUE
 proc_getgroups(VALUE obj)
 {
-    VALUE ary;
+    VALUE ary, tmp;
     int i, ngroups;
     rb_gid_t *groups;
 
@@ -5555,7 +5555,7 @@ proc_getgroups(VALUE obj)
     if (ngroups == -1)
 	rb_sys_fail(0);
 
-    groups = ALLOCA_N(rb_gid_t, ngroups);
+    groups = ALLOCV_N(rb_gid_t, tmp, ngroups);
 
     ngroups = getgroups(ngroups, groups);
     if (ngroups == -1)
@@ -5564,6 +5564,8 @@ proc_getgroups(VALUE obj)
     ary = rb_ary_new();
     for (i = 0; i < ngroups; i++)
 	rb_ary_push(ary, GIDT2NUM(groups[i]));
+
+    ALLOCV_END(tmp);
 
     return ary;
 }
@@ -5591,6 +5593,7 @@ proc_setgroups(VALUE obj, VALUE ary)
 {
     int ngroups, i;
     rb_gid_t *groups;
+    VALUE tmp;
     PREPARE_GETGRNAM;
 
     Check_Type(ary, T_ARRAY);
@@ -5599,7 +5602,7 @@ proc_setgroups(VALUE obj, VALUE ary)
     if (ngroups > maxgroups())
 	rb_raise(rb_eArgError, "too many groups, %d max", maxgroups());
 
-    groups = ALLOCA_N(rb_gid_t, ngroups);
+    groups = ALLOCV_N(rb_gid_t, tmp, ngroups);
 
     for (i = 0; i < ngroups; i++) {
 	VALUE g = RARRAY_AREF(ary, i);
@@ -5610,6 +5613,8 @@ proc_setgroups(VALUE obj, VALUE ary)
 
     if (setgroups(ngroups, groups) == -1) /* ngroups <= maxgroups */
 	rb_sys_fail(0);
+
+    ALLOCV_END(tmp);
 
     return proc_getgroups(obj);
 }
